[package]
name = "get-livecaptions"
version = "0.1.0"
edition = "2021"
authors = ["corbamico@163.com"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version="0.56"
features = [
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
    "UI_UIAutomation",
    "Win32_System_Memory",
]